Added config for azure iot

--- a/arch/arm/configs/redpitaya_zynq_defconfig
+++ b/arch/arm/configs/redpitaya_zynq_defconfig
@@ -383,3 +383,9 @@ CONFIG_IRQCHIP_XILINX_INTC_MODULE_SUPPORT_EXPERIMENTAL=y
 CONFIG_MEDIA_SUPPORT=n
 CONFIG_MEDIA_ANALOG_TV_SUPPORT=n
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=n
+
+
+# Azure IOT
+CONFIG_OVERLAY_FS=y
+CONFIG_BRIDGE_NETFILTER=m
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=m
