--- a/arch/arm/configs/redpitaya_zynq_defconfig
+++ b/arch/arm/configs/redpitaya_zynq_defconfig
@@ -389,3 +389,54 @@ CONFIG_MEDIA_DIGITAL_TV_SUPPORT=n
 CONFIG_OVERLAY_FS=y
 CONFIG_BRIDGE_NETFILTER=m
 CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=m
+
+# Docker
+CONFIG_CGROUP_DEBUG=y
+CONFIG_CGROUP_FREEZER=y
+CONFIG_CGROUP_PIDS=y
+CONFIG_CGROUP_DEVICE=y
+CONFIG_CPUSETS=y
+CONFIG_CGROUP_CPUACCT=y
+CONFIG_MEMCG=y
+CONFIG_BLK_CGROUP=y
+CONFIG_CGROUP_PERF=y
+CONFIG_CGROUP_SCHED=y
+CONFIG_VETH=y
+CONFIG_POSIX_MQUEUE=y
+CONFIG_CGROUP_BPF=y
+CONFIG_BPF_SYSCALL=y
+CONFIG_USER_NS=y
+CONFIG_MEMCG_SWAP=y
+CONFIG_NF_NAT_FTP=y
+CONFIG_NF_NAT_TFTP=y
+CONFIG_IP_VS=m
+CONFIG_IP_VS_PROTO_TCP=y
+CONFIG_IP_VS_PROTO_UDP=y
+CONFIG_EXT4_FS_POSIX_ACL=y
+CONFIG_EXT4_FS_SECURITY=y
+CONFIG_BLK_DEV_THROTTLING=y
+CONFIG_NET_CLS_CGROUP=y
+CONFIG_CGROUP_NET_PRIO=y
+CONFIG_CFS_BANDWIDTH=y
+CONFIG_IP_VS_NFCT=y
+CONFIG_SECURITY_APPARMOR=y
+
+CONFIG_IP_NF_TARGET_REDIRECT=m
+CONFIG_IP_VS_RR=m
+CONFIG_CRYPTO_SEQIV=m
+CONFIG_NETFILTER_XT_MATCH_IPVS=m
+CONFIG_NETFILTER_XT_MATCH_IPCOMP=m
+CONFIG_NETFILTER_XT_MATCH_IPRANGE=m
+CONFIG_NETFILTER_XT_MARK=y
+CONFIG_VXLAN=m
+CONFIG_BRIDGE_VLAN_FILTERING=y
+CONFIG_BTRFS_FS=y
+CONFIG_BTRFS_FS_POSIX_ACL=y
+CONFIG_NF_CONNTRACK_FTP=m
+CONFIG_NF_CONNTRACK_TFTP=m
+CONFIG_INET_ESP=m
+CONFIG_XFRM_USER=m
+CONFIG_XFRM_ALGO=m
+CONFIG_NETFILTER_XT_MATCH_BPF=m
+
+# End docker config
